# stringFinder

./: .gitignore  BENCHMARKS.md  BenchmarkMain  BenchmarkMain.cpp  CMakeLists.txt  Dockerfile  ESFCompressorMain.cpp  ExternStringFinderMain.cpp  InternStringFinderMain.cpp  Makefile  README.md  StringData.cpp  StringData.hpp  StringDataBenchmark  StringDataBenchmark.cpp  StringDataMain  StringDataMain.cpp  StringDataTest.cpp  StringFinderInteractiveMain.cpp  StringFinderMain  StringFinderMain.cpp  TODO.md  Timer.cpp  Timer.hpp  TimerTest.cpp  bashrc  data.test.txt  marks.md  notesESF.md  stringSearchBenchmark.cpp  strstrSearchBenchmark.cpp  tmp.cpp
benchmark/: benchmark.sh
files/: benchmarks.md  optimization_ideas.md
scripts/: benchmark.py  benchmark.sh  benchmark_ESF.py  compress.sh  createBenchmarkFiles.py  createTestFile.py  plot_time.gnuplot  plot_time_template.gnuplot  results.tsv
src/: Benchmark.cpp  Benchmark.h  Benchmark.hpp  Buffer.h  CMakeLists.txt  CpuTimer.cpp  CpuTimer.hpp  ExternStringFinder.cpp  ExternStringFinder.h  ExternStringFinder.hpp  InteractiveFinder.cpp  InteractiveFinder.h  InteractiveFinder.hpp  InteractiveStringFinder.cpp  InteractiveStringFinder.h  InternStringFinder.cpp  InternStringFinder.h  RotatingReader.cpp  RotatingReader.h  String.cpp  String.h  StringData.cpp  StringData.hpp  StringFinder.cpp  StringFinder.h  StringFinder.hpp  StringFinderBase.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  Timer.cpp  Timer.h  Timer.hpp  WallTimer.cpp  WallTimer.hpp
src/string_search_algorithms/: CMakeLists.txt  stdstringSearch.h  using_stdstring.h  using_strstr.cpp  using_strstr.h
src/string_search_algorithms/test/: CMakeLists.txt  using_stdstring_test.cpp  using_strstr_test.cpp
src/string_search_algorithms/test/files/: _search.test.txt
src/utils/: Buffer.cpp  Buffer.h  CMakeLists.txt  ESFCompressor.h  ESFMetaFile.cpp  ESFMetaFile.h  FileChunk.cpp  FileChunk.h  InputParser.cpp  InputParser.h  SFMetaFile.cpp  SFMetaFile.h  Task.cpp  Task.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  Timer.cpp  Timer.h  UninitializedAllocator.h  ZstdWrapper.h  exceptions.h  math.h
src/utils/output/: tree.h
src/utils/readers/: BaseReader.h  CMakeLists.txt  ESFCompressedIFSTREAMReader.cpp  ESFCompressedIFSTREAMReader.h  ESFCompressedPOSIXReader.cpp  ESFCompressedPOSIXReader.h  ESFIFSTREAMReader.cpp  ESFIFSTREAMReader.h  ESFPOSIXReader.cpp  ESFPOSIXReader.h  ESFReader.h  ISFBaseReader.h  ISFCompressedReader.cpp  ISFCompressedReader.h  ISFReader.cpp  ISFReader.h  externalIFSTREAMreader.cpp  externalIFSTREAMreader.h  externalPOSIXreader.cpp  externalPOSIXreader.h
src/utils/test/: CMakeLists.txt  FileChunkTest.cpp
src/utils/test/files/: _chunk.test.zst
test/: BufferTest.cpp  CMakeLists.txt  ESFMetaFileTest.cpp  ExternStringFinderTest.cpp  InputParserTest.cpp  InteractiveFinderTest.cpp  RotatingReaderTest.cpp  StringFinderTest.cpp  StringTest.cpp  ThreadSafeQueueTest.cpp  WallTimerTest.cpp  ZstdTest.cpp  _bufferTest  _esfMetaFileTest  _stringFinderTest  externFinderTest.txt
tests/: CpuTimeTest.cpp  InteractiveFinderTest.cpp  StringDataTest.cpp  StringFinderTest.cpp  WallTimerTest.cpp
