add_executable(InteractiveFinderTest InteractiveFinderTest.cpp)
target_link_libraries(InteractiveFinderTest StringFinder gtest_main)

add_executable(StringFinderTest StringFinderTest.cpp)
target_link_libraries(StringFinderTest StringFinder gtest_main)

add_executable(WallTimerTest WallTimerTest.cpp)
target_link_libraries(WallTimerTest Benchmark gtest_main)

#add_executable(ExternStringFinderTest ExternStringFinderTest.cpp)
#target_link_libraries(ExternStringFinderTest ExternStringFinder gtest_main)

add_executable(StringTest StringTest.cpp)
target_link_libraries(StringTest String gtest_main)

add_executable(TSQTest ThreadSafeQueueTest.cpp)
target_link_libraries(TSQTest TSQueue String gtest_main)
